--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "outDir": "dist",
     "strict": true,
     "skipLibCheck": true,
-    "types": ["playwright"]
+    "types": ["node", "playwright"]
+
   },
   "include": ["tests/**/*.ts", "Utils/**/*.ts"],
   "exclude": ["node_modules"]
